# Qalculate

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/me/antonio/noack/calculate/: CalculatePlugin.kt
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/test/: widget_test.dart
ios/Classes/: all.c  config.h  native_add_test.cpp  qal.cpp
ios/Classes/gmp/: assert.c  bootstrap.c  compat.c  config.h  errno.c  extract-dbl.c  fac_table.h  fib_table.h  gen-bases.c  gen-fac.c  gen-fib.c  gen-jacobitab.c  gen-psqr.c  gen-trialdivtab.c  gmp-impl.c  gmp-impl.h  gmp-mparam.h  gmp.c.h  gmp.h  invalid.c  longlong.h  memory.c  memory.h  mp_bases.h  mp_bpl.c  mp_clz_tab.c  mp_dv_tab.c  mp_get_fns.c  mp_minv_tab.c  mp_set_fns.c  nextprime.c  primesieve.c  tal-debug.c  tal-notreent.c  tal-reent.c  version.c
ios/Classes/libqalculate/: BuiltinFunctions.cc  BuiltinFunctions.h  Calculator-withNames.cc  Calculator.cc  Calculator.h  DataSet.cc  DataSet.h  ExpressionItem.cc  ExpressionItem.h  Function.cc  Function.h  MathStructure.cc  MathStructure.h  Number-withNames.cc  Number.cc  Number.h  Prefix.cc  Prefix.h  QalculateDateTime.cc  QalculateDateTime.h  Unit.cc  Unit.h  Variable.cc  Variable.h  includes.h  qalc.cc  qalculate.h  support.h  util.cc  util.h
ios/Classes/libxml/: HTMLparser.c  HTMLparser.h  HTMLtree.c  SAX2.c  buf.c  buf.h  c14n.c  catalog.c  config.h  dict.c  (+65 more)
lib/: calculate.dart
(+488 files in other folders)
